examples/test/testpolicy14738.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14738
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key15: value23
      key39: value43
      key34: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value5
          key30: value49
          key39: value13
